--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "# reading dataset using panda\n",
     "data_path = os.path.dirname(os.getcwd())\n",
-    "tinder_df = pd.read_csv(os.path.join(data_path, \"data\\\\tinder_data.csv\"))"
+    "tinder_df = pd.read_csv(os.path.join(data_path, \"data\\\\tinder_data.csv\"))\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
    ],
    "source": [
     "# information about the dataset\n",
-    "tinder_df.info()"
+    "tinder_df.info()\n"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "source": [
     "tinder_df.groupby([\"sex\", \"drugs\"])[\"drugs\"].count().reset_index(\n",
     "    name=\"unique_drug_count\"\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "source": [
     "tinder_df.groupby([\"new_languages\", \"dropped_out\"])[\"dropped_out\"].count().reset_index(\n",
     "    name=\"drop_out_people count\"\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "plt.hist(tinder_df[\"age\"])"
+    "plt.hist(tinder_df[\"age\"])\n"
    ]
   },
   {
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "plt.hist(tinder_df[\"height\"])"
+    "plt.hist(tinder_df[\"height\"])\n"
    ]
   },
   {
@@ -349,7 +349,8 @@
     "# Use the `cut` function to assign\n",
     "# each data point to a category\n",
     "categories = pd.cut(\n",
-    "    tinder_df[\"age\"], bins, labels=[\"18-30\", \"30-40\", \"40-50\", \"50-60\", \"60-70\"]\n",
+    "    tinder_df[\"age\"], bins, labels=[\n",
+    "        \"18-30\", \"30-40\", \"40-50\", \"50-60\", \"60-70\"]\n",
     ")\n",
     "\n",
     "# Count the number of data points in each category\n",
@@ -357,7 +358,7 @@
     "\n",
     "# Plot the data as a pie chart\n",
     "plt.pie(counts, labels=counts.index, autopct=\"%1.1f%%\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -387,7 +388,7 @@
     "plt.xlabel(\"Job id\", fontsize=12)\n",
     "plt.ylabel(\"Count of people\", fontsize=12)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -416,7 +417,7 @@
    "source": [
     "# check if every row has a\n",
     "# common language as english\n",
-    "tinder_df[\"language\"].str.contains(\"english\").unique()"
+    "tinder_df[\"language\"].str.contains(\"english\").unique()\n"
    ]
   },
   {
@@ -427,7 +428,7 @@
    "source": [
     "# count the number of languages in each row\n",
     "tinder_df[\"num_languages\"] = tinder_df[\"language\"].str.count(\",\") + 1\n",
-    "tinder_df.drop([\"language\"], axis=1, inplace=True)"
+    "tinder_df.drop([\"language\"], axis=1, inplace=True)\n"
    ]
   },
   {
@@ -440,7 +441,7 @@
     "\n",
     "tinder_df[\"location_preference\"] = tinder_df[\"location_preference\"].apply(\n",
     "    lambda x: place_type_strength[x]\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -449,9 +450,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "two_unique_values_column = {\"sex\": {\"f\": 1, \"m\": 0}, \"dropped_out\": {\"no\": 0, \"yes\": 1}}\n",
+    "two_unique_values_column = {\n",
+    "    \"sex\": {\"f\": 1, \"m\": 0}, \"dropped_out\": {\"no\": 0, \"yes\": 1}}\n",
     "\n",
-    "tinder_df.replace(two_unique_values_column, inplace=True)"
+    "tinder_df.replace(two_unique_values_column, inplace=True)\n"
    ]
   },
   {
@@ -466,7 +468,8 @@
     "    \"seeing someone\": 1.0,\n",
     "    \"married\": 1.0,\n",
     "}\n",
-    "tinder_df[\"status\"] = tinder_df[\"status\"].apply(lambda x: status_type_strength[x])"
+    "tinder_df[\"status\"] = tinder_df[\"status\"].apply(\n",
+    "    lambda x: status_type_strength[x])\n"
    ]
   },
   {
@@ -482,10 +485,11 @@
     "orientation_encoder.fit(tinder_df[\"orientation\"])\n",
     "\n",
     "# encode the orientation column using the fitted encoder\n",
-    "tinder_df[\"orientation\"] = orientation_encoder.transform(tinder_df[\"orientation\"])\n",
+    "tinder_df[\"orientation\"] = orientation_encoder.transform(\n",
+    "    tinder_df[\"orientation\"])\n",
     "\n",
     "# Drop the existing orientation column\n",
-    "tinder_df.drop(\"orientation\", axis=1, inplace=True)"
+    "tinder_df.drop(\"orientation\", axis=1, inplace=True)\n"
    ]
   },
   {
@@ -515,7 +519,7 @@
     "tinder_df[\"drugs_encoded\"] = habit_encoder.transform(tinder_df[\"drugs\"])\n",
     "\n",
     "# Drop the existing drink and drugs column\n",
-    "tinder_df.drop([\"drinks\", \"drugs\"], axis=1, inplace=True)\n"
+    "tinder_df.drop([\"drinks\", \"drugs\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -543,8 +547,7 @@
     "    return \"northern_california\"\n",
     "\n",
     "\n",
-    "tinder_df[\"location\"] = tinder_df[\"location\"].str.split(\n",
-    "    \", \").str[0].apply(get_region)\n",
+    "tinder_df[\"location\"] = tinder_df[\"location\"].str.split(\", \").str[0].apply(get_region)\n",
     "# perform one hot encoding\n",
     "location_encoder = OneHotEncoder()\n",
     "\n",
@@ -560,7 +563,7 @@
     "# concatenate the new DataFrame with the original DataFrame\n",
     "tinder_df = pd.concat([tinder_df, location_encoded_df], axis=1)\n",
     "# Drop the existing location column\n",
-    "tinder_df.drop([\"location\"], axis=1, inplace=True)\n"
+    "tinder_df.drop([\"location\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -579,7 +582,7 @@
     "tinder_df[\"job_encoded\"] = job_encoder.transform(tinder_df[\"job\"])\n",
     "\n",
     "# drop the original job column\n",
-    "tinder_df.drop(\"job\", axis=1, inplace=True)\n"
+    "tinder_df.drop(\"job\", axis=1, inplace=True)"
    ]
   },
   {
@@ -588,9 +591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smokes = {\"no\": 1.0, \"sometimes\": 0, \"yes\": 0,\n",
-    "          \"when drinking\": 0, \"trying to quit\": 0}\n",
-    "tinder_df[\"smokes\"] = tinder_df[\"smokes\"].apply(lambda x: smokes[x])\n"
+    "smokes = {\"no\": 1.0, \"sometimes\": 0, \"yes\": 0, \"when drinking\": 0, \"trying to quit\": 0}\n",
+    "tinder_df[\"smokes\"] = tinder_df[\"smokes\"].apply(lambda x: smokes[x])"
    ]
   },
   {
@@ -607,7 +609,7 @@
     "# add the encoded columns to the original dataframe\n",
     "tinder_df = pd.concat([tinder_df, pet_enc], axis=1)\n",
     "\n",
-    "tinder_df.drop(\"pets\", axis=1, inplace=True)\n"
+    "tinder_df.drop(\"pets\", axis=1, inplace=True)"
    ]
   },
   {
@@ -623,14 +625,13 @@
     "location_encoder.fit(tinder_df[\"new_languages\"])\n",
     "\n",
     "# encode the job column using the fitted encoder\n",
-    "tinder_df[\"new_languages\"] = location_encoder.transform(\n",
-    "    tinder_df[\"new_languages\"])\n",
+    "tinder_df[\"new_languages\"] = location_encoder.transform(tinder_df[\"new_languages\"])\n",
     "\n",
     "# create an instance of LabelEncoder\n",
     "le = LabelEncoder()\n",
     "\n",
     "# encode the body_profile column\n",
-    "tinder_df[\"body_profile\"] = le.fit_transform(tinder_df[\"body_profile\"])\n"
+    "tinder_df[\"body_profile\"] = le.fit_transform(tinder_df[\"body_profile\"])"
    ]
   },
   {
@@ -667,7 +668,7 @@
     "\n",
     "# Calculate the cosine similarity\n",
     "# between all pairs of users\n",
-    "cosine_sim = cosine_similarity(svd_matrix)\n"
+    "cosine_sim = cosine_similarity(svd_matrix)"
    ]
   },
   {
@@ -696,10 +697,10 @@
     "    # num_recommendations similar users\n",
     "    sim_scores = list(enumerate(cosine_sim_new[0]))\n",
     "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
-    "    sim_indices = [i[0] for i in sim_scores[1: num_recommendations + 1]]\n",
+    "    sim_indices = [i[0] for i in sim_scores[1 : num_recommendations + 1]]\n",
     "\n",
     "    # Return the user_ids of the recommended users\n",
-    "    return tinder_df[\"username\"].iloc[sim_indices]\n"
+    "    return tinder_df[\"username\"].iloc[sim_indices]"
    ]
   },
   {
@@ -716,18 +717,22 @@
     "user_df[\"sex\"] = float(input(\"Enter sex (0 for female, 1 for male): \"))\n",
     "user_df[\"height\"] = float(input(\"Enterheight in inches: \"))\n",
     "user_df[\"smokes\"] = float(input(\"Enter smokes (0 for no, 1 for yes): \"))\n",
-    "user_df[\"new_languages\"] = float(input(\"Enter number of new languages learned: \"))\n",
+    "user_df[\"new_languages\"] = float(\n",
+    "    input(\"Enter number of new languages learned: \"))\n",
     "user_df[\"body_profile\"] = float(input(\"Enter body profile (0-1)\"))\n",
     "user_df[\"education_level\"] = float(input(\"Enter education level (1-5): \"))\n",
-    "user_df[\"dropped_out\"] = float(input(\"Enter dropped out (0 for no, 1 for yes): \"))\n",
+    "user_df[\"dropped_out\"] = float(\n",
+    "    input(\"Enter dropped out (0 for no, 1 for yes): \"))\n",
     "user_df[\"bio\"] = [input(\"Enter bio: \")]\n",
-    "user_df[\"location_preference\"] = float(input(\"Enter location preference (0-2): \"))\n",
+    "user_df[\"location_preference\"] = float(\n",
+    "    input(\"Enter location preference (0-2): \"))\n",
     "user_df[\"num_languages\"] = float(input(\"Enter number of languages known: \"))\n",
     "user_df[\"drinks_encoded\"] = float(input(\"Enter drinks encoded (0-3): \"))\n",
     "user_df[\"drugs_encoded\"] = float(input(\"Enter drugs encoded (0-2): \"))\n",
     "\n",
     "# Get user input for one-hot encoded categorical columns\n",
-    "user_df[\"location_new_york\"] = float(input(\"Enter location_new_york (0 or 1): \"))\n",
+    "user_df[\"location_new_york\"] = float(\n",
+    "    input(\"Enter location_new_york (0 or 1): \"))\n",
     "user_df[\"location_northern_california\"] = float(\n",
     "    input(\"Enter location_northern_california (0 or 1): \")\n",
     ")\n",
@@ -749,7 +754,7 @@
     "# dictionary to a Pandas DataFrame\n",
     "user_df = pd.DataFrame(user_df, index=[0])\n",
     "user_df.drop(\"bio\", axis=1, inplace=True)\n",
-    "user_df = pd.concat([user_df, tfidf_df], axis=1)"
+    "user_df = pd.concat([user_df, tfidf_df], axis=1)\n"
    ]
   },
   {
@@ -782,33 +787,16 @@
     "# Enter pets_0 (0 or 1): 0\n",
     "# Enter pets_1 (0 or 1): 0\n",
     "# Enter pets_2 (0 or 1): 0\n",
-    "# Enter pets_3 (0 or 1): 0"
+    "# Enter pets_3 (0 or 1): 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The feature names should match those that were passed during fit.\nFeature names unseen at fit time:\n- location_new_york\n- location_southern_california\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\const\\OneDrive\\Documents\\GitHub\\InterpretabilityAndFairness_Tinder\\EDA\\EDA.ipynb Cell 32\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(recommend(user_df))\n",
-      "\u001b[1;32mc:\\Users\\const\\OneDrive\\Documents\\GitHub\\InterpretabilityAndFairness_Tinder\\EDA\\EDA.ipynb Cell 32\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrecommend\u001b[39m(user_df, num_recommendations\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m): \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \t\u001b[39m# Apply SVD to the feature \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \t\u001b[39m# matrix of the user_df dataframe \u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \tsvd_matrixs \u001b[39m=\u001b[39m svd\u001b[39m.\u001b[39;49mtransform(user_df) \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \t\u001b[39m# Calculate the cosine similarity \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \t\u001b[39m# between the user_df and training set users \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/const/OneDrive/Documents/GitHub/InterpretabilityAndFairness_Tinder/EDA/EDA.ipynb#X64sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \tcosine_sim_new \u001b[39m=\u001b[39m cosine_similarity(svd_matrixs, svd_matrix) \n",
-      "File \u001b[1;32mc:\\Users\\const\\Anaconda\\envs\\inter-fair-env\\lib\\site-packages\\sklearn\\utils\\_set_output.py:157\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    155\u001b[0m \u001b[39m@wraps\u001b[39m(f)\n\u001b[0;32m    156\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapped\u001b[39m(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m--> 157\u001b[0m     data_to_wrap \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    158\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data_to_wrap, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m    159\u001b[0m         \u001b[39m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    160\u001b[0m         return_tuple \u001b[39m=\u001b[39m (\n\u001b[0;32m    161\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[39m0\u001b[39m], X, \u001b[39mself\u001b[39m),\n\u001b[0;32m    162\u001b[0m             \u001b[39m*\u001b[39mdata_to_wrap[\u001b[39m1\u001b[39m:],\n\u001b[0;32m    163\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\Users\\const\\Anaconda\\envs\\inter-fair-env\\lib\\site-packages\\sklearn\\decomposition\\_truncated_svd.py:292\u001b[0m, in \u001b[0;36mTruncatedSVD.transform\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Perform dimensionality reduction on X.\u001b[39;00m\n\u001b[0;32m    280\u001b[0m \n\u001b[0;32m    281\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    289\u001b[0m \u001b[39m    Reduced version of X. This will always be a dense array.\u001b[39;00m\n\u001b[0;32m    290\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    291\u001b[0m check_is_fitted(\u001b[39mself\u001b[39m)\n\u001b[1;32m--> 292\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(X, accept_sparse\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mcsr\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mcsc\u001b[39;49m\u001b[39m\"\u001b[39;49m], reset\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    293\u001b[0m \u001b[39mreturn\u001b[39;00m safe_sparse_dot(X, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcomponents_\u001b[39m.\u001b[39mT)\n",
-      "File \u001b[1;32mc:\\Users\\const\\Anaconda\\envs\\inter-fair-env\\lib\\site-packages\\sklearn\\base.py:580\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, cast_to_ndarray, **check_params)\u001b[0m\n\u001b[0;32m    509\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_data\u001b[39m(\n\u001b[0;32m    510\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m    511\u001b[0m     X\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mno_validation\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    516\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_params,\n\u001b[0;32m    517\u001b[0m ):\n\u001b[0;32m    518\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Validate input data and set or check the `n_features_in_` attribute.\u001b[39;00m\n\u001b[0;32m    519\u001b[0m \n\u001b[0;32m    520\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    578\u001b[0m \u001b[39m        validated.\u001b[39;00m\n\u001b[0;32m    579\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 580\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_check_feature_names(X, reset\u001b[39m=\u001b[39;49mreset)\n\u001b[0;32m    582\u001b[0m     \u001b[39mif\u001b[39;00m y \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_tags()[\u001b[39m\"\u001b[39m\u001b[39mrequires_y\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[0;32m    583\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    584\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThis \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m estimator \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    585\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mrequires y to be passed, but the target y is None.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    586\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\Users\\const\\Anaconda\\envs\\inter-fair-env\\lib\\site-packages\\sklearn\\base.py:507\u001b[0m, in \u001b[0;36mBaseEstimator._check_feature_names\u001b[1;34m(self, X, reset)\u001b[0m\n\u001b[0;32m    502\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m missing_names \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m unexpected_names:\n\u001b[0;32m    503\u001b[0m     message \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\n\u001b[0;32m    504\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFeature names must be in the same order as they were in fit.\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m    505\u001b[0m     )\n\u001b[1;32m--> 507\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(message)\n",
-      "\u001b[1;31mValueError\u001b[0m: The feature names should match those that were passed during fit.\nFeature names unseen at fit time:\n- location_new_york\n- location_southern_california\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(recommend(user_df))"
+    "print(recommend(user_df))\n"
    ]
   }
  ],
