models and read me

--- a/EDA/Models.ipynb
+++ b/EDA/Models.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBClassifier\n",
-    "from lightgbm import LGBMRegressor\n"
+    "from lightgbm import LGBMRegressor"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "source": [
     "# reading dataset using panda\n",
     "data_path = os.path.dirname(os.getcwd())\n",
-    "data_df = pd.read_csv(os.path.join(data_path, \"data\\\\data_income.csv\"))"
+    "data_df = pd.read_csv(os.path.join(data_path, \"data\\\\data_income.csv\"))\n"
    ]
   },
   {
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "data_df.head()"
+    "data_df.head()\n"
    ]
   },
   {
@@ -380,7 +380,7 @@
     "    \"capital-gain\",\n",
     "    \"capital-loss\",\n",
     "    \"hours-per-week\",\n",
-    "]"
+    "]\n"
    ]
   },
   {
@@ -392,7 +392,7 @@
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -432,7 +432,7 @@
     "# Create a pipeline with preprocessing and the machine learning model\n",
     "model = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "pipeline = Pipeline([(\"preprocessor\", preprocessor), (\"model\", model)])\n"
+    "pipeline = Pipeline([(\"preprocessor\", preprocessor), (\"model\", model)])"
    ]
   },
   {
@@ -458,7 +458,7 @@
     "\n",
     "# Evaluate the model's performance\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.2f}\")\n"
+    "print(f\"Accuracy: {accuracy:.2f}\")"
    ]
   },
   {
@@ -490,7 +490,7 @@
     "# Sort the DataFrame by importance in descending order\n",
     "feature_importance_df = feature_importance_df.sort_values(\n",
     "    by=\"Importance\", ascending=False\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -516,7 +516,7 @@
     "plt.xlabel(\"Importance\")\n",
     "plt.ylabel(\"Feature\")\n",
     "plt.title(\"Feature Importance Scores\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -557,7 +557,7 @@
     "\n",
     "# Evaluate the model's performance\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.2f}\")"
+    "print(f\"Accuracy: {accuracy:.2f}\")\n"
    ]
   },
   {
@@ -602,7 +602,7 @@
     "# Sort the DataFrame by importance in descending order\n",
     "feature_importance_df = feature_importance_df.sort_values(\n",
     "    by=\"Importance\", ascending=False\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -628,7 +628,7 @@
     "plt.xlabel(\"Importance\")\n",
     "plt.ylabel(\"Feature\")\n",
     "plt.title(\"Feature Importance Scores\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -646,7 +646,7 @@
    "source": [
     "# fix the format for y\n",
     "y_train_bin = y_train.replace({\">50K\": 1, \"<=50K\": 0})\n",
-    "y_test_bin = y_test.replace({\">50K\": 1, \"<=50K\": 0})"
+    "y_test_bin = y_test.replace({\">50K\": 1, \"<=50K\": 0})\n"
    ]
   },
   {
@@ -687,7 +687,7 @@
     "\n",
     "# Evaluate the model's performance\n",
     "accuracy = accuracy_score(y_test_bin, y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")"
+    "print(f\"Accuracy: {accuracy:.4f}\")\n"
    ]
   },
   {
@@ -735,7 +735,7 @@
     "\n",
     "# Evaluate the model's performance\n",
     "accuracy = accuracy_score(y_test_bin, y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")\n"
+    "print(f\"Accuracy: {accuracy:.4f}\")"
    ]
   },
   {
@@ -762,7 +762,7 @@
     "# Create a DataFrame with feature names and importance scores\n",
     "feature_importance_df = pd.DataFrame(\n",
     "    {\"Feature\": all_features, \"Importance\": feature_importances}\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -775,16 +775,14 @@
     "\n",
     "# Create a DataFrame with feature names and importance scores\n",
     "feature_importance_df_categ = pd.DataFrame(\n",
-    "    {\"Feature\": one_hot_feature_names,\n",
-    "        \"Importance\": feature_importances[:102:]}\n",
+    "    {\"Feature\": one_hot_feature_names, \"Importance\": feature_importances[:102:]}\n",
     ")\n",
     "\n",
     "# Extract the original categorical feature names and category names\n",
     "original_categorical_features = [\n",
     "    col.split(\"_\")[0] for col in feature_importance_df_categ[\"Feature\"]\n",
     "]\n",
-    "category_names = [col.split(\"_\")[1]\n",
-    "                  for col in feature_importance_df_categ[\"Feature\"]]\n",
+    "category_names = [col.split(\"_\")[1] for col in feature_importance_df_categ[\"Feature\"]]\n",
     "\n",
     "# Add the original feature and category names as columns in the DataFrame\n",
     "feature_importance_df_categ[\"OriginalFeature\"] = original_categorical_features\n",
@@ -799,7 +797,7 @@
     "    [\"OriginalFeature\"]\n",
     ")[\"Importance\"].sum()\n",
     "category_importance[\"Feature\"] = category_importance.index\n",
-    "category_importance = category_importance.reset_index()\n"
+    "category_importance = category_importance.reset_index()"
    ]
   },
   {
@@ -809,8 +807,9 @@
    "outputs": [],
    "source": [
     "categ_imp_plot = category_importance[[\"Feature\", \"Importance\"]]\n",
-    "imp_plot = pd.concat([categ_imp_plot, feature_importance_df[-6:]], ignore_index=True)\n",
-    "imp_plot = imp_plot.sort_values(by=\"Importance\", ascending=False)"
+    "imp_plot = pd.concat(\n",
+    "    [categ_imp_plot, feature_importance_df[-6:]], ignore_index=True)\n",
+    "imp_plot = imp_plot.sort_values(by=\"Importance\", ascending=False)\n"
    ]
   },
   {
@@ -836,7 +835,7 @@
     "plt.xlabel(\"Importance\")\n",
     "plt.ylabel(\"Feature\")\n",
     "plt.title(\"Feature Importance Scores\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -886,7 +885,7 @@
     "\n",
     "# Evaluate the model's performance\n",
     "accuracy = accuracy_score(y_test_bin, y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")\n"
+    "print(f\"Accuracy: {accuracy:.4f}\")"
    ]
   },
   {
@@ -894,6 +893,59 @@
    "metadata": {},
    "source": [
     "similar results than XGBoost but a little slower lets use XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "# Load your XGBoost model (replace with your model loading code)\n",
+    "xgb_model = xgb.XGBClassifier()\n",
+    "\n",
+    "# Load your dataset (replace with your data loading code)\n",
+    "X, y = load_your_data()\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Get predictions from the XGBoost model\n",
+    "xgb_predictions = xgb_model.predict(X_test)\n",
+    "\n",
+    "# Create a dataset for the surrogate model\n",
+    "surrogate_data = pd.DataFrame({\"XGB_Predictions\": xgb_predictions})\n",
+    "surrogate_data = surrogate_data.join(X_test)  # Include selected features\n",
+    "\n",
+    "# Choose a surrogate model (linear regression)\n",
+    "surrogate_model = LinearRegression()\n",
+    "\n",
+    "# Train the surrogate model\n",
+    "surrogate_model.fit(\n",
+    "    surrogate_data.drop(\"XGB_Predictions\", axis=1), surrogate_data[\"XGB_Predictions\"]\n",
+    ")\n",
+    "\n",
+    "# Interpret the surrogate model (e.g., feature importance or coefficients)\n",
+    "surrogate_feature_importance = surrogate_model.coef_  # For linear regression\n",
+    "\n",
+    "# Evaluate the surrogate model (optional)\n",
+    "surrogate_predictions = surrogate_model.predict(X_test)\n",
+    "r2 = r2_score(xgb_predictions, surrogate_predictions)\n",
+    "print(f\"R-squared for surrogate model: {r2}\")"
    ]
   }
  ],
