commit gift François

--- a/Notebooks/Model Fairness.ipynb
+++ b/Notebooks/Model Fairness.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
     "for value in feature_values:\n",
     "    # Modifier le jeu de données pour fixer la caractéristique à la valeur actuelle\n",
     "    modified_X_test = X_test.copy()\n",
-    "    modified_X_test[feature_of_interest] = value\n",
+    "    modified_X_test[protected_attribute] = value\n",
     "    \n",
     "    # Faire des prédictions sur le jeu de données modifié\n",
     "    modified_y_pred = pipeline.predict(modified_X_test)\n",
